In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Randomized Search > Model 2 section: Load random search from .pkl and use for-loop to extract parameters

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6146,7 +6146,7 @@
     "# Load random search (using helper function) \n",
     "rf_random_search = load_model(\"rf_random_search.pkl\")\n",
     "\n",
-    "# DataFrame of randomized search results\n",
+    "# Create DataFrame of randomized search results\n",
     "rf_random_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": rf_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
     "    \"parameters\": rf_random_search.cv_results_[\"params\"]  # parameter values\n",
@@ -6241,32 +6241,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5811353-a37f-4b1e-b517-a2d3932ce658",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Load random search from <code>.pkl</code> file and show Top 10 models.\n",
+    "</p> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "18f5411d-1f7e-4026-a7c3-9af17259fa60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DataFrame of randomized search results\n",
+    "# Load random search (using helper function) \n",
+    "xgb_random_search = load_model(\"xgb_random_search.pkl\")\n",
+    "\n",
+    "# Create DataFrame of randomized search results\n",
     "xgb_random_search_results = pd.DataFrame({\n",
     "    \"validation_accuracy\": xgb_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
     "    \"parameters\": xgb_random_search.cv_results_[\"params\"]  # parameter values\n",
     "})\n",
     "\n",
     "# Extract each hyperparameter as a separate column\n",
-    "xgb_random_search_results[\"n_estimators\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
-    "xgb_random_search_results[\"max_depth\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
-    "xgb_random_search_results[\"learning_rate\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
-    "xgb_random_search_results[\"subsample\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"subsample\"])\n",
-    "xgb_random_search_results[\"colsample_bytree\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"colsample_bytree\"])\n",
-    "xgb_random_search_results[\"gamma\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"gamma\"])\n",
-    "xgb_random_search_results[\"min_child_weight\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"min_child_weight\"])\n",
+    "for parameter in xgb_param_distributions:\n",
+    "    xgb_random_search_results[parameter] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[parameter])\n",
     "\n",
     "# Delete the parameters column\n",
     "xgb_random_search_results = xgb_random_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
-    "# Show the top 10 best performing models \n",
-    "print(xgb_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+    "# Show top 10 best performing models \n",
+    "xgb_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10)"
    ]
   },
   {
