In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Update markdown documentation cell of section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3088,9 +3088,7 @@
   {
    "cell_type": "markdown",
    "id": "6dc85084-35ba-46e8-82aa-db1dacb9f2f5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "<div style=\"background-color:#2c699d; color:white; padding:15px; border-radius:6px\">\n",
     "    <h1 style=\"margin:0px\">Modeling (Regression)</h1>\n",
@@ -5745,13 +5743,24 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
-    "    💡  Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
+    "    💡  Select the best performing baseline models for hyperparameter tuning. <br><br>\n",
+    "    Example: The following models outperformed the other candidates on the evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR) and additional diagnostics (precision-recall curves, classification report, confusion matrix, overfitting, feature misclassification analysis) and were selected for hyperparameter tuning:  \n",
     "    <ul>\n",
     "        <li><b>Random Forest</b>: Showed balanced, high performance across key metrics (notably F1-score and AUC-PR) and minimal overfitting.</li>\n",
     "        <li><b>XGBoost</b>: Achieved leading performance on key metrics, especially ROC-AUC and F1-score.</li>\n",
     "    </ul>\n",
-    "    Next steps: Tune the hyperparameters of each model using grid search or randomized search and optimize decision thresholds. Evaluate the best hyperparameter-tuned models with both default and optimized thresholds on the validation data using evaluation metrics and additional diagnostics. \n",
+    "    Next steps: \n",
+    "    <ul>\n",
+    "        <li>Tune the hyperparameters of each model using grid search or randomized search.</li>\n",
+    "        <li>Retrain the best-performing model from each algorithm and plot precision-recall curves.</li>\n",
+    "        <li>Optimize decision thresholds.</li>\n",
+    "        <li>Evaluate the best hyperparameter-tuned models with both default and optimized thresholds on the validation data using:\n",
+    "            <ul>\n",
+    "                <li>Evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR).</li>\n",
+    "                <li>Additional diagnostics (classification report, confusion matrix, overfitting, feature misclassification analysis).</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "    </ul>   \n",
     "</div>"
    ]
   },
