In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning > Grid Search > Model 1 section: Add class_weight parameter in grid and update inline documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5849,7 +5849,8 @@
     "    \"max_depth\": [None, 10, 20],              \n",
     "    \"min_samples_split\": [2, 5],\n",
     "    \"min_samples_leaf\": [1, 2],\n",
-    "    \"max_features\": [0.33, 0.66, 1]                \n",
+    "    \"max_features\": [0.33, 0.66, 1],                \n",
+    "    \"class_weight\": [None, \"balanced\", \"balanced_subsample\"]\n",
     "}\n",
     "\n",
     "# Initialize grid search object\n",
@@ -5863,7 +5864,7 @@
     "# Fit the grid search to the training data\n",
     "rf_grid_search.fit(X_train_transformed, y_train)\n",
     "\n",
-    "# Save fitted grid search as .pkl file (using helper function)  \n",
+    "# Save fitted grid search as .pkl file using helper function  \n",
     "save_model(rf_grid_search, \"rf_grid_search.pkl\")"
    ]
   },
@@ -5884,7 +5885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load grid search (using helper function) \n",
+    "# Load grid search using helper function\n",
     "rf_grid_search = load_model(\"rf_grid_search.pkl\")\n",
     "\n",
     "# Create DataFrame of grid search results \n",
@@ -5973,7 +5974,7 @@
     "# Fit the grid search to the training data\n",
     "xgb_grid_search.fit(X_train_transformed, y_train)\n",
     "\n",
-    "# Save fitted grid search as .pkl file (using helper function)  \n",
+    "# Save fitted grid search as .pkl file using helper function  \n",
     "save_model(xgb_grid_search, \"xgb_grid_search.pkl\")"
    ]
   },
@@ -5994,7 +5995,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load grid search (using helper function) \n",
+    "# Load grid search using helper function \n",
     "xgb_grid_search = load_model(\"xgb_grid_search.pkl\")\n",
     "\n",
     "# Create DataFrame of grid search results \n",
@@ -6124,14 +6125,14 @@
     "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
     "    random_state=42,\n",
     "    n_jobs=-1,  # utilize all available CPU cores for parallel processing\n",
-    "    verbose=2,\n",
+    "    verbose=2,  # print training progress messages \n",
     "    refit=False  # Prevent storing \"best_estimator_\" to save storage\n",
     ")\n",
     "\n",
     "# Fit the random search to the training data\n",
     "rf_random_search.fit(X_train_transformed, y_train)\n",
     "\n",
-    "# Save fitted random search as .pkl file (using helper function)  \n",
+    "# Save fitted random search as .pkl file using helper function \n",
     "save_model(rf_random_search, \"rf_random_search.pkl\")"
    ]
   },
@@ -6152,7 +6153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load random search (using helper function) \n",
+    "# Load random search using helper function \n",
     "rf_random_search = load_model(\"rf_random_search.pkl\")\n",
     "\n",
     "# Create DataFrame of randomized search results\n",
@@ -6239,13 +6240,13 @@
     "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"average_precision\" optionally\n",
     "    random_state=42,\n",
     "    n_jobs=-1,  # utilize all available CPU cores for parallel processing\n",
-    "    verbose=2\n",
+    "    verbose=2  # print training progress messages \n",
     ")\n",
     "\n",
     "# Fit the random search to the training data\n",
     "xgb_random_search.fit(X_train_transformed, y_train)\n",
     "\n",
-    "# Save fitted random search as .pkl file (using helper function)  \n",
+    "# Save fitted random search as .pkl file using helper function \n",
     "save_model(xgb_random_search, \"xgb_random_search.pkl\")"
    ]
   },
@@ -6266,7 +6267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load random search (using helper function) \n",
+    "# Load random search using helper function \n",
     "xgb_random_search = load_model(\"xgb_random_search.pkl\")\n",
     "\n",
     "# Create DataFrame of randomized search results\n",
