In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Add section Retraining to retrain the best tuned model from each algorithm on full training data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5754,7 +5754,7 @@
     "        <li>Tune the hyperparameters of each model using grid search or randomized search.</li>\n",
     "        <li>Retrain the best-performing model from each algorithm and plot precision-recall curves.</li>\n",
     "        <li>Optimize decision thresholds.</li>\n",
-    "        <li>Evaluate the best hyperparameter-tuned models with both default and optimized thresholds on the validation data using:\n",
+    "        <li>Evaluate the best hyperparameter-tuned models with both default and optimized thresholds using:\n",
     "            <ul>\n",
     "                <li>Evaluation metrics (accuracy, recall, precision, F1-score, ROC-AUC, AUC-PR).</li>\n",
     "                <li>Additional diagnostics (classification report, confusion matrix, overfitting, feature misclassification analysis).</li>\n",
@@ -6285,6 +6285,40 @@
     "\n",
     "# Show top 10 best performing models \n",
     "xgb_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caac7f4a-bf45-4c35-9bae-bb03f634a675",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Retraining</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Retrain the best hyperparameter-tuned model from each algorithm on the full training dataset.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec29123-bf13-4f89-a93d-8d45c440fcf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define best hyperparameter-tuned model from each algorithm (continue example with Random Forest and XGBoost)\n",
+    "tuned_models = {\n",
+    "    \"Random Forest\": RandomForestClassifier(**rf_random_search.best_params_, random_state=42),  # or rf_grid_search.best_params_\n",
+    "    \"XGBoost\": XGBClassifier(**xgb_random_search.best_params_, random_state=42)  # or xgb_grid_search.best_params_\n",
+    "}\n",
+    "\n",
+    "# Retrain models on the full training data\n",
+    "tuned_model_results = evaluate_all_models(tuned_models, X_train_transformed, y_train, X_val_transformed, y_val)\n",
+    "\n",
+    "# Save hyperparameter-tuned model results as .pkl file \n",
+    "save_model(tuned_model_results, \"tuned_models.pkl\")"
    ]
   },
   {
