In machine_learning_template.ipynb > Modeling (Classification) > Hyperparameter Tuning section: Add section Precision-Recall Curves

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6296,8 +6296,8 @@
     "    <h3 style=\"margin:0px\">Retraining</h3>\n",
     "</div>\n",
     "\n",
-    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    ℹ️ Retrain the best hyperparameter-tuned model from each algorithm on the full training dataset.\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Retrain the best hyperparameter-tuned model from each algorithm on the full training dataset.\n",
     "</div>"
    ]
   },
@@ -6319,6 +6319,39 @@
     "\n",
     "# Save hyperparameter-tuned model results as .pkl file \n",
     "save_model(tuned_model_results, \"tuned_models.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d0f3b91-5bb3-48e8-985f-c73bad25667b",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Precision-Recall Curves</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Plot precision-recall curves of the tuned models on the validation data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f76e020-39c4-4eb8-b481-2c20eca93610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load hyperparameter-tuned model results\n",
+    "tuned_model_results = load_model(\"tuned_models.pkl\")\n",
+    "\n",
+    "# Plot precision-recall curves of hyperparameter-tuned models\n",
+    "plot_precision_recall_curve(\n",
+    "    y_val, \n",
+    "    tuned_model_results, \n",
+    "    title=\"Precision-Recall Curves: Hyperparameter-Tuned Models\",\n",
+    "    safe_to_file=\"precision_recall_curves_tuned.png\"\n",
+    ")"
    ]
   },
   {
