--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6356,6 +6356,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "102035fb-63e2-46e2-a2f0-548008a96afb",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Threshold Optimization</h3>\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ The default decision threshold (typically 0.5) may not be ideal to achieve the business goals. In many cases, there are non-negotiable performance targets or misclassifications have quantifiable costs. Optimizing the decision threshold based on business needs typically involves one of two main strategies. 1) Setting a minimum performance requirement for a primary metric (like recall) and then optimizing a secondary metric (like precision). 2) Assigning costs to false positives (FP) and false negatives (FN) and determining the threshold that minimizes the total cost. Some examples are:\n",
+    "    <ul>\n",
+    "        <li>Spam Filtering: Prioritize a very low rate of legitimate emails being misclassified as spam (minimum precision for spam class of 0.99), then optimize the detection of actual spam emails (maximizing recall for spam class).</li>\n",
+    "        <li>Medical Screening: Aim for very high disease detection (minimum recall for disease class of 0.97), then optimize to reduce unnecessary follow-up tests for healthy individuals (maximizing precision for disease class).</li>\n",
+    "        <li>Fraud Detection: Assign costs to missed fraud (FN cost of 150€) and blocked legitimate transactions (FP cost of 20€) to find the threshold that minimizes overall cost.</li>\n",
+    "    </ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
    "source": [
