In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning > Threshold Optimization section: Update explanations in markdown cell

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6364,11 +6364,16 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
-    "    ℹ️ The default decision threshold (typically 0.5) may not be ideal to achieve the business goals. In many cases, there are non-negotiable performance targets or misclassifications have quantifiable costs. Optimizing the decision threshold based on business needs typically involves one of two main strategies. 1) Setting a minimum performance requirement for a primary metric (like recall) and then optimizing a secondary metric (like precision). 2) Assigning costs to false positives (FP) and false negatives (FN) and determining the threshold that minimizes the total cost. Some examples are:\n",
+    "    ℹ️ The default decision threshold (typically 0.5) may not be ideal to achieve the business goals, especially when certain performance targets are non-negotiable or misclassification has quantifiable costs. There are two common strategies to optimize the threshold based on business needs: \n",
+    "    <ol>\n",
+    "        <li>Set a minimum requirement for a primary metric (e.g., recall), and then optimize a secondary metric (e.g., precision).</li>\n",
+    "        <li>Assign costs to false positives (FP) and false negatives (FN), and select the threshold that minimizes total cost.</li>\n",
+    "    </ol> \n",
+    "    Examples:\n",
     "    <ul>\n",
-    "        <li>Spam Filtering: Prioritize a very low rate of legitimate emails being misclassified as spam (minimum precision for spam class of 0.99), then optimize the detection of actual spam emails (maximizing recall for spam class).</li>\n",
-    "        <li>Medical Screening: Aim for very high disease detection (minimum recall for disease class of 0.97), then optimize to reduce unnecessary follow-up tests for healthy individuals (maximizing precision for disease class).</li>\n",
-    "        <li>Fraud Detection: Assign costs to missed fraud (FN cost of 150€) and blocked legitimate transactions (FP cost of 20€) to find the threshold that minimizes overall cost.</li>\n",
+    "        <li>Spam Filtering: Enforce a minimum precision of 0.99 to avoid misclassifying legitimate emails as spam (users are highly sensitive to missing important emails), then maximize recall to catch as much spam as possible.</li>\n",
+    "        <li>Medical Screening: Ensure a recall of at least 0.97 for the disease class to avoid missed diagnoses (which could delay treatment and increase mortality risk), then optimize precision to reduce unnecessary follow-up tests for healthy people.</li>\n",
+    "        <li>Fraud Detection: Assign costs to missed fraud (FN cost of 200€) and blocked legitimate transactions (FP cost of 5€) and select the threshold that minimizes total cost.</li>\n",
     "    </ul>\n",
     "</div>"
    ]
