--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6379,6 +6379,197 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f54e4d14-b05d-4900-ba67-3a0ef15f0100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to evaluate a single model across multiple decision thresholds and determine the best threshold \n",
+    "def optimize_threshold(y_true, y_pred_proba, thresholds=None, optimize=\"Accuracy\", min_accuracy=0, min_recall=0, min_precision=0, min_f1=0,\n",
+    "                       cost_fp=0, cost_fn=0, title=\"Metrics by Threshold\", safe_to_file=False):\n",
+    "    # Use 1% to 99% in 1%-steps in the absence of custom thresholds\n",
+    "    if thresholds is None:\n",
+    "        thresholds = np.arange(0.01, 1, 0.01)\n",
+    "\n",
+    "    # --- Calculate metrics for each threshold ---\n",
+    "    # Store threshold evaluation results as list of dictionaries\n",
+    "    threshold_results = []   \n",
+    "    \n",
+    "    # Iterate over each threshold\n",
+    "    for threshold in thresholds:\n",
+    "        # Get class predictions for current threshold\n",
+    "        y_pred = (y_pred_proba >= threshold).astype(int)\n",
+    "        \n",
+    "        # Calculate evaluation metrics for current threshold\n",
+    "        accuracy = accuracy_score(y_true, y_pred)\n",
+    "        precision, recall, f1, _ = precision_recall_fscore_support(y_true, y_pred, zero_division=0) \n",
+    "\n",
+    "        # Calculate cost for current threshold\n",
+    "        if optimize == \"Cost\" and cost_fp == 0 and cost_fn == 0:\n",
+    "            print(\"Warning: Cannot optimize for 'Cost' when cost_fn and cost_fp are both 0. Defaulting to 'Accuracy'.\")\n",
+    "            optimize=\"Accuracy\"\n",
+    "            total_cost = None\n",
+    "        elif optimize == \"Cost\" and (cost_fp > 0 or cost_fn > 0):\n",
+    "            # Calculate number of true negatives (tn), false positives (fp), false negatives (fn) and true positives (tp)\n",
+    "            tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
+    "            # Calculate total cost\n",
+    "            total_cost = cost_fp * fp + cost_fn * fn\n",
+    "        else:\n",
+    "            total_cost = None\n",
+    "        \n",
+    "        # Add evaluation metrics dictionary to list\n",
+    "        threshold_results.append({\n",
+    "            \"threshold\": threshold,\n",
+    "            \"Accuracy\": accuracy,\n",
+    "            \"Recall (Class 1)\": recall[1],\n",
+    "            \"Precision (Class 1)\": precision[1],\n",
+    "            \"F1-Score (Class 1)\": f1[1],\n",
+    "            \"Cost\": total_cost\n",
+    "        })    \n",
+    "\n",
+    "    # Convert list of dictionaries to DataFrame\n",
+    "    threshold_results = pd.DataFrame(threshold_results)\n",
+    "\n",
+    "    # --- Determine the best threshold --- \n",
+    "    # Filter thresholds that satisfy minimum accuracy, recall, precision, and F1-score\n",
+    "    filtered_thresholds = threshold_results[\n",
+    "        (threshold_results[\"Accuracy\"] >= min_accuracy) & \n",
+    "        (threshold_results[\"Recall (Class 1)\"] >= min_recall) & \n",
+    "        (threshold_results[\"Precision (Class 1)\"] >= min_precision) & \n",
+    "        (threshold_results[\"F1-Score (Class 1)\"] >= min_f1)\n",
+    "    ]\n",
+    "    \n",
+    "    # Fallback to no minimum criteria if not a single threshold satisfies all of them\n",
+    "    if filtered_thresholds.empty:\n",
+    "        print(\"Warning: No threshold satisfies all minimum criteria.\")\n",
+    "        print(\"Defaulting to optimization without any minimum criteria.\")\n",
+    "        filtered_thresholds = threshold_results.copy()\n",
+    "    \n",
+    "    # Optimize accuracy\n",
+    "    if optimize == \"Accuracy\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Accuracy\"].idxmax(), \"threshold\"] \n",
+    "    # Optimize recall\n",
+    "    elif optimize == \"Recall (Class 1)\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Recall (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    # Optimize precision\n",
+    "    elif optimize == \"Precision (Class 1)\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Precision (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    # Optimize F1-score\n",
+    "    elif optimize == \"F1-Score (Class 1)\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"F1-Score (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    # Optimize cost\n",
+    "    elif optimize == \"Cost\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Cost\"].idxmin(), \"threshold\"]  \n",
+    "    # Fallback to accuracy if metric unkown \n",
+    "    else:\n",
+    "        print(f\"Warning: Unknown optimize metric '{optimize}'. Defaulting to accuracy.\")\n",
+    "        optimize = \"Accuracy\"\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Accuracy\"].idxmax(), \"threshold\"] \n",
+    "    \n",
+    "    # --- Plot metrics by threshold --- \n",
+    "    # Set the figure size\n",
+    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "\n",
+    "    # Define metrics to use in plot starting with the optimization metric\n",
+    "    metrics = [optimize]\n",
+    "    # When plotting anything other than cost, also plot all metrics with minimum criteria\n",
+    "    if optimize != \"Cost\":\n",
+    "        if min_accuracy > 0 and \"Accuracy\" not in metrics:\n",
+    "            metrics.append(\"Accuracy\")\n",
+    "        if min_recall > 0 and \"Recall (Class 1)\" not in metrics:\n",
+    "            metrics.append(\"Recall (Class 1)\")\n",
+    "        if min_precision > 0 and \"Precision (Class 1)\" not in metrics:\n",
+    "            metrics.append(\"Precision (Class 1)\")\n",
+    "        if min_f1 > 0 and \"F1-Score (Class 1)\" not in metrics:\n",
+    "            metrics.append(\"F1-Score (Class 1)\")\n",
+    "\n",
+    "    # Order metrics\n",
+    "    ordered_metrics = [\"Cost\", \"Accuracy\", \"Recall (Class 1)\", \"Precision (Class 1)\", \"F1-Score (Class 1)\"]\n",
+    "    ordered_metrics = [metric for metric in ordered_metrics if metric in metrics]\n",
+    "        \n",
+    "    # Get a color from viridis colormap for each metric\n",
+    "    n_metrics = len(ordered_metrics)\n",
+    "    cmap = plt.get_cmap(\"viridis\", n_metrics)\n",
+    "\n",
+    "    # Iterate over each metric\n",
+    "    for i, metric in enumerate(ordered_metrics):\n",
+    "        # Create line plot of current metric by threshold\n",
+    "        ax.plot(threshold_results[\"threshold\"], threshold_results[metric], label=metric, color=cmap(i))\n",
+    "    \n",
+    "    # Format cost plots\n",
+    "    if optimize == \"Cost\":\n",
+    "        title += f\" (FN Cost: {cost_fn}, FP Cost: {cost_fp})\"  # add FN and FP costs to title \n",
+    "        ax.yaxis.set_major_formatter(FuncFormatter(lambda x, _: f\"{x:,.0f}\"))  # format cost y-axis with thousand separator and no decimals\n",
+    "\n",
+    "    # Format plots with all other metrics\n",
+    "    else:\n",
+    "        ax.set_ylim(-0.02, 1.02)  # value range of metrics is 0 to 1, slightly extend y-axis for better visibility\n",
+    "        ax.set_yticks(np.arange(0, 1.1, 0.1))  # set y-axis ticks from 0 to 1 in 0.1 steps        \n",
+    "\n",
+    "    # Customize plot\n",
+    "    ax.set_title(title, fontsize=14)\n",
+    "    ax.set_xlabel(\"Threshold\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Metric Value\" if n_metrics > 1 else metric, fontsize=12)\n",
+    "    ax.set_xlim(0, 1)\n",
+    "    ax.set_xticks(np.arange(0, 1.1, 0.1))\n",
+    "    ax.legend(fontsize=11).set_visible(True if n_metrics > 1 else False)\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    " \n",
+    "    # Add dashed line for best threshold \n",
+    "    ax.axvline(x=best_threshold, color=\"gray\", linestyle=\"--\")\n",
+    "    y_min, y_max = ax.get_ylim()\n",
+    "    ax.text(best_threshold+0.01, y_min+(y_max-y_min)*0.05, f\"Best Threshold: {best_threshold:.2f}\", rotation=90, fontsize=11)\n",
+    "    \n",
+    "    # Adjust layout\n",
+    "    fig.tight_layout()\n",
+    "\n",
+    "    # Save to file\n",
+    "    if safe_to_file:\n",
+    "        os.makedirs(\"images\", exist_ok=True)\n",
+    "        image_path = os.path.join(\"images\", f\"{safe_to_file}\")  \n",
+    "        if not os.path.exists(image_path):\n",
+    "            try:        \n",
+    "                plt.savefig(image_path, bbox_inches=\"tight\", dpi=144)\n",
+    "                print(f\"Metrics by threshold plot saved successfully to '{image_path}'.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error saving metrics by threshold plot: {e}\")\n",
+    "        else:\n",
+    "            print(f\"Skip saving metrics by threshold plot to file: '{image_path}' already exists.\")\n",
+    "\n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "    return best_threshold, threshold_results\n",
+    "\n",
+    "\n",
+    "# Example usage: Optimize accuracy (default) \n",
+    "rf_best_threshold, rf_threshold_results = optimize_threshold(\n",
+    "    y_true=y_val, \n",
+    "    y_pred_proba=tuned_model_results[\"Random Forest\"][\"y_val_proba\"],\n",
+    "    title=\"Accuracy by Threshold\"\n",
+    ")\n",
+    "\n",
+    "# Example usage: Optimize precision while ensuring minimum recall  \n",
+    "rf_best_threshold, rf_threshold_results = optimize_threshold(\n",
+    "    y_true=y_val, \n",
+    "    y_pred_proba=tuned_model_results[\"Random Forest\"][\"y_val_proba\"],\n",
+    "    optimize=\"Precision (Class 1)\",\n",
+    "    min_recall=0.95\n",
+    ")\n",
+    "\n",
+    "# Example usage: Optimize cost  \n",
+    "rf_best_threshold, rf_threshold_results = optimize_threshold(\n",
+    "    y_true=y_val, \n",
+    "    y_pred_proba=tuned_model_results[\"Random Forest\"][\"y_val_proba\"],\n",
+    "    optimize=\"Cost\",\n",
+    "    cost_fn=8500,\n",
+    "    cost_fp=1250,\n",
+    "    title=\"Cost by Threshold\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
