In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning > Threshold Optimization section: Use optimize_threshold function to optimize thresholds for all tuned models

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6566,7 +6566,35 @@
     "    cost_fn=8500,\n",
     "    cost_fp=1250,\n",
     "    title=\"Cost by Threshold\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "\n",
+    "# --- Use function to optimize thresholds for all tuned models --- \n",
+    "# Store tuned threshold model results as dictionary\n",
+    "tuned_threshold_model_results = {}\n",
+    "\n",
+    "# Iterate over each tuned model\n",
+    "for model_name, model_results in tuned_model_results.items():\n",
+    "    # Optimize threshold for current model on the validation data \n",
+    "    best_threshold, threshold_results = optimize_threshold(\n",
+    "        y_true=y_val, \n",
+    "        y_pred_proba=model_results[\"y_val_proba\"], \n",
+    "        optimize=\"Precision (Class 1)\",  # maximize precision\n",
+    "        min_recall=0.95,  # ensure minimum recall of 0.95 \n",
+    "        title=f\"{model_name}: Metrics by Threshold\"\n",
+    "    )\n",
+    "\n",
+    "    # Add best threshold and resulting class predictions to tuned threshold model results dictionary\n",
+    "    tuned_threshold_model_results[model_name] = {}\n",
+    "    tuned_threshold_model_results[model_name][\"best_threshold\"] = best_threshold\n",
+    "    tuned_threshold_model_results[model_name][\"y_val_pred\"] = (tuned_model_results[model_name][\"y_val_proba\"] >= best_threshold).astype(int)\n",
+    "\n",
+    "    # Add evaluation metrics of optimized threshold model to results dictionary\n",
+    "    tuned_threshold_model_results[model_name][\"AUC-PR\"] = model_results[\"AUC-PR\"]\n",
+    "    tuned_threshold_model_results[model_name][\"Accuracy\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Accuracy\"].squeeze()\n",
+    "    tuned_threshold_model_results[model_name][\"Recall (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Recall (Class 1)\"].squeeze()\n",
+    "    tuned_threshold_model_results[model_name][\"Precision (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Precision (Class 1)\"].squeeze()\n",
+    "    tuned_threshold_model_results[model_name][\"F1-Score (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"F1-Score (Class 1)\"].squeeze()"
    ]
   },
   {
