--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6403,8 +6403,10 @@
     "        \n",
     "        # Calculate evaluation metrics for current threshold\n",
     "        accuracy = accuracy_score(y_true, y_pred)\n",
-    "        precision, recall, f1, _ = precision_recall_fscore_support(y_true, y_pred, zero_division=0) \n",
-    "\n",
+    "        recall = recall_score(y_true, y_pred)\n",
+    "        precision = precision_score(y_true, y_pred)\n",
+    "        f1 = f1_score(y_true, y_pred)\n",
+    "    \n",
     "        # Calculate cost for current threshold\n",
     "        if optimize == \"Cost\" and cost_fp == 0 and cost_fn == 0:\n",
     "            print(\"Warning: Cannot optimize for 'Cost' when cost_fn and cost_fp are both 0. Defaulting to 'Accuracy'.\")\n",
@@ -6422,9 +6424,9 @@
     "        threshold_results.append({\n",
     "            \"threshold\": threshold,\n",
     "            \"Accuracy\": accuracy,\n",
-    "            \"Recall (Class 1)\": recall[1],\n",
-    "            \"Precision (Class 1)\": precision[1],\n",
-    "            \"F1-Score (Class 1)\": f1[1],\n",
+    "            \"Recall\": recall,\n",
+    "            \"Precision\": precision,\n",
+    "            \"F1-Score\": f1,\n",
     "            \"Cost\": total_cost\n",
     "        })    \n",
     "\n",
@@ -6435,9 +6437,9 @@
     "    # Filter thresholds that satisfy minimum accuracy, recall, precision, and F1-score\n",
     "    filtered_thresholds = threshold_results[\n",
     "        (threshold_results[\"Accuracy\"] >= min_accuracy) & \n",
-    "        (threshold_results[\"Recall (Class 1)\"] >= min_recall) & \n",
-    "        (threshold_results[\"Precision (Class 1)\"] >= min_precision) & \n",
-    "        (threshold_results[\"F1-Score (Class 1)\"] >= min_f1)\n",
+    "        (threshold_results[\"Recall\"] >= min_recall) & \n",
+    "        (threshold_results[\"Precision\"] >= min_precision) & \n",
+    "        (threshold_results[\"F1-Score\"] >= min_f1)\n",
     "    ]\n",
     "    \n",
     "    # Fallback to no minimum criteria if not a single threshold satisfies all of them\n",
@@ -6450,14 +6452,14 @@
     "    if optimize == \"Accuracy\":\n",
     "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Accuracy\"].idxmax(), \"threshold\"] \n",
     "    # Optimize recall\n",
-    "    elif optimize == \"Recall (Class 1)\":\n",
-    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Recall (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    elif optimize == \"Recall\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Recall\"].idxmax(), \"threshold\"]  \n",
     "    # Optimize precision\n",
-    "    elif optimize == \"Precision (Class 1)\":\n",
-    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Precision (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    elif optimize == \"Precision\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Precision\"].idxmax(), \"threshold\"]  \n",
     "    # Optimize F1-score\n",
-    "    elif optimize == \"F1-Score (Class 1)\":\n",
-    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"F1-Score (Class 1)\"].idxmax(), \"threshold\"]  \n",
+    "    elif optimize == \"F1-Score\":\n",
+    "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"F1-Score\"].idxmax(), \"threshold\"]  \n",
     "    # Optimize cost\n",
     "    elif optimize == \"Cost\":\n",
     "        best_threshold = filtered_thresholds.loc[filtered_thresholds[\"Cost\"].idxmin(), \"threshold\"]  \n",
@@ -6477,15 +6479,15 @@
     "    if optimize != \"Cost\":\n",
     "        if min_accuracy > 0 and \"Accuracy\" not in metrics:\n",
     "            metrics.append(\"Accuracy\")\n",
-    "        if min_recall > 0 and \"Recall (Class 1)\" not in metrics:\n",
-    "            metrics.append(\"Recall (Class 1)\")\n",
-    "        if min_precision > 0 and \"Precision (Class 1)\" not in metrics:\n",
-    "            metrics.append(\"Precision (Class 1)\")\n",
-    "        if min_f1 > 0 and \"F1-Score (Class 1)\" not in metrics:\n",
-    "            metrics.append(\"F1-Score (Class 1)\")\n",
+    "        if min_recall > 0 and \"Recall\" not in metrics:\n",
+    "            metrics.append(\"Recall\")\n",
+    "        if min_precision > 0 and \"Precision\" not in metrics:\n",
+    "            metrics.append(\"Precision\")\n",
+    "        if min_f1 > 0 and \"F1-Score\" not in metrics:\n",
+    "            metrics.append(\"F1-Score\")\n",
     "\n",
     "    # Order metrics\n",
-    "    ordered_metrics = [\"Cost\", \"Accuracy\", \"Recall (Class 1)\", \"Precision (Class 1)\", \"F1-Score (Class 1)\"]\n",
+    "    ordered_metrics = [\"Cost\", \"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\"]\n",
     "    ordered_metrics = [metric for metric in ordered_metrics if metric in metrics]\n",
     "        \n",
     "    # Get a color from viridis colormap for each metric\n",
@@ -6554,7 +6556,7 @@
     "rf_best_threshold, rf_threshold_results = optimize_threshold(\n",
     "    y_true=y_val, \n",
     "    y_pred_proba=tuned_model_results[\"Random Forest\"][\"y_val_proba\"],\n",
-    "    optimize=\"Precision (Class 1)\",\n",
+    "    optimize=\"Precision\",\n",
     "    min_recall=0.95\n",
     ")\n",
     "\n",
@@ -6579,7 +6581,7 @@
     "    best_threshold, threshold_results = optimize_threshold(\n",
     "        y_true=y_val, \n",
     "        y_pred_proba=model_results[\"y_val_proba\"], \n",
-    "        optimize=\"Precision (Class 1)\",  # maximize precision\n",
+    "        optimize=\"Precision\",  # maximize precision\n",
     "        min_recall=0.95,  # ensure minimum recall of 0.95 \n",
     "        title=f\"{model_name}: Metrics by Threshold\"\n",
     "    )\n",
@@ -6590,11 +6592,12 @@
     "    tuned_threshold_model_results[model_name][\"y_val_pred\"] = (tuned_model_results[model_name][\"y_val_proba\"] >= best_threshold).astype(int)\n",
     "\n",
     "    # Add evaluation metrics of optimized threshold model to results dictionary\n",
+    "    tuned_threshold_model_results[model_name][\"ROC-AUC\"] = model_results[\"ROC-AUC\"]\n",
     "    tuned_threshold_model_results[model_name][\"AUC-PR\"] = model_results[\"AUC-PR\"]\n",
     "    tuned_threshold_model_results[model_name][\"Accuracy\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Accuracy\"].squeeze()\n",
-    "    tuned_threshold_model_results[model_name][\"Recall (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Recall (Class 1)\"].squeeze()\n",
-    "    tuned_threshold_model_results[model_name][\"Precision (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Precision (Class 1)\"].squeeze()\n",
-    "    tuned_threshold_model_results[model_name][\"F1-Score (Class 1)\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"F1-Score (Class 1)\"].squeeze()"
+    "    tuned_threshold_model_results[model_name][\"Recall\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Recall\"].squeeze()\n",
+    "    tuned_threshold_model_results[model_name][\"Precision\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"Precision\"].squeeze()\n",
+    "    tuned_threshold_model_results[model_name][\"F1-Score\"] = threshold_results.loc[threshold_results[\"threshold\"] == best_threshold, \"F1-Score\"].squeeze()"
    ]
   },
   {
