In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning section: Add Metrics section with code to compare evaluation metrics of tuned models with default and optimized thresholds on the validation data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6602,6 +6602,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "774835c2-4e02-48ad-8c62-89fc827fe843",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Metrics</h3>\n",
+    "</div> \n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    📌 Compare evaluation metrics of hyperparameter-tuned models with default and optimized thresholds on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be02b09-49e9-45c2-907b-3d5155c781f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract metrics with default thresholds\n",
+    "metrics_default_thresholds = {\n",
+    "    model_name: {\n",
+    "        metric: tuned_model_results[model_name][metric]\n",
+    "        for metric in [\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"]\n",
+    "    }\n",
+    "    for model_name in tuned_model_results\n",
+    "}\n",
+    "\n",
+    "# Extract metrics with optimized thresholds\n",
+    "metrics_optimized_thresholds = {\n",
+    "    model_name: {\n",
+    "        metric: tuned_threshold_model_results[model_name][metric]\n",
+    "        for metric in [\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"]\n",
+    "    }\n",
+    "    for model_name in tuned_threshold_model_results\n",
+    "}\n",
+    "\n",
+    "# Create dictionary with tuned model comparison tables \n",
+    "tuned_model_comparison = {\n",
+    "    \"default_thresholds\": pd.DataFrame(metrics_default_thresholds).transpose(),\n",
+    "    \"optimized_thresholds\": pd.DataFrame(metrics_optimized_thresholds).transpose()\n",
+    "}\n",
+    "\n",
+    "# Display comparison table for default thresholds\n",
+    "print(\"Hyperparameter-Tuned Models (Default Thresholds)\")\n",
+    "display(round(tuned_model_comparison[\"default_thresholds\"], 2))\n",
+    "\n",
+    "# Display comparison table for optimized thresholds\n",
+    "print(\"Hyperparameter-Tuned Models (Optimized Thresholds)\")\n",
+    "display(round(tuned_model_comparison[\"optimized_thresholds\"], 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
    "source": [
