In machine_learning_template.ipynb > Modeling > Baseline Models > Overfitting section: Set legend loc='best' (default) in plot_train_val_difference function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5604,7 +5604,7 @@
     "    ax.tick_params(axis=\"x\", labelsize=12, labelrotation=45 if len(overfitting_results.index) > 5 else 0)  # rotate xticks if more than 5 models\n",
     "    ax.tick_params(axis=\"y\", labelsize=10)  \n",
     "    ax.set_ylim(metric_df[\"Value\"].min() - 0.05, metric_df[\"Value\"].max() + 0.05)  # slightly extend y-axis for visibility \n",
-    "    ax.legend(loc=\"upper left\", fontsize=11)\n",
+    "    ax.legend(fontsize=11)\n",
     "    ax.grid(axis=\"y\", alpha=0.3)\n",
     "\n",
     "    # Save to file\n",
