In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning section: Add section CLassification Report and Confusion Matrix with code for all tuned models with subsections for default and optimized thresholds

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6656,6 +6656,120 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e642e3b9-0b0f-41db-abaa-543c1a8d071f",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Classification Report and Confusion Matrix</h3>\n",
+    "</div> \n",
+    "\n",
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Default Thresholds</strong> <br>\n",
+    "    📌 Show classification report and plot confusion matrix of hyperparameter-tuned models with default thresholds on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd22a07-d99b-4d22-af6a-ee6113ba054c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create classification report for all tuned models with default thresholds\n",
+    "for model_name, model_result in tuned_model_results.items():\n",
+    "    print(f\"\\n{model_name} (Default Threshold): Classification Report\")\n",
+    "    print(classification_report(y_val, model_result[\"y_val_pred\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5386e29f-a5c5-4b1e-afa0-9f4cfe3074b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Plot confusion matrix for all tuned models with default thresholds ---\n",
+    "# Calculate number of rows and columns for subplot grid\n",
+    "n_plots = len(tuned_model_results)\n",
+    "n_cols = 2  \n",
+    "n_rows = math.ceil(n_plots / n_cols) \n",
+    "\n",
+    "# Create subplot grid with figure size based on 6x6 inches per subplot\n",
+    "fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 6, n_rows * 6))\n",
+    "\n",
+    "# Flatten the axes for easier iteration\n",
+    "axes = axes.flat\n",
+    "\n",
+    "# Iterate over each model\n",
+    "for i, (model_name, model_result) in enumerate(tuned_model_results.items()):\n",
+    "    # Plot confusion matrix for current model\n",
+    "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name} (Default Threshold)\", axes=axes[i])\n",
+    "    \n",
+    "# Adjust layout to prevent overlap\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ccf47a-d1f2-4a91-a5d6-8f2e741e8de9",
+   "metadata": {},
+   "source": [
+    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    <strong>Optimized Thresholds</strong> <br>\n",
+    "    📌 Show classification report and plot confusion matrix of hyperparameter-tuned models with optimized thresholds on the validation data.\n",
+    "</p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f8b009d-7e24-403e-8a30-f49289877bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create classification report for all tuned models with optimized thresholds\n",
+    "for model_name, model_result in tuned_threshold_model_results.items():\n",
+    "    print(f\"\\n{model_name} (Optimized Threshold): Classification Report\")\n",
+    "    print(classification_report(y_val, model_result[\"y_val_pred\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd95f369-bed2-4a84-848a-813b65416870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Plot confusion matrix for all tuned models with optimized thresholds ---\n",
+    "# Calculate number of rows and columns for subplot grid\n",
+    "n_plots = len(tuned_threshold_model_results)\n",
+    "n_cols = 2  \n",
+    "n_rows = math.ceil(n_plots / n_cols) \n",
+    "\n",
+    "# Create subplot grid with figure size based on 6x6 inches per subplot\n",
+    "fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols * 6, n_rows * 6))\n",
+    "\n",
+    "# Flatten the axes for easier iteration\n",
+    "axes = axes.flat\n",
+    "\n",
+    "# Iterate over each model\n",
+    "for i, (model_name, model_result) in enumerate(tuned_threshold_model_results.items()):\n",
+    "    # Plot confusion matrix for current model\n",
+    "    plot_confusion_matrix(y_val, model_result[\"y_val_pred\"], title=f\"{model_name} (Optimized Threshold)\", axes=axes[i])\n",
+    "    \n",
+    "# Adjust layout to prevent overlap\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
    "source": [
