In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning section: Add section Overfitting with code to analyze overfitting of tuned models with default thresholds

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6770,6 +6770,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01102512-f7e6-4c56-b152-d16d3e865a6a",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#4e8ac8; color:white; padding:10px; border-radius:6px;\">\n",
+    "    <h3 style=\"margin:0px\">Overfitting</h3>\n",
+    "</div> \n",
+    "\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Default Thresholds</strong> <br>\n",
+    "    📌 Diagnose overfitting of hyperparameter-tuned models with default thresholds by comparing evaluation metrics between training and validation data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91a47cf-064e-4fd8-b5e0-718257619200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze overfitting for tuned models with default thresholds \n",
+    "tuned_models_overfitting = analyze_overfitting(X_train_transformed, y_train, model_results=tuned_model_results)\n",
+    "print(\"Hyperparameter-Tuned Models (Default Thresholds)\")\n",
+    "round(tuned_models_overfitting, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2751432-dc39-4811-9253-752313474d87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot train vs. validation comparison of all metrics for tuned models with default thresholds  \n",
+    "plot_train_val_metrics([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], tuned_models_overfitting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56a7e46-bfed-4ac7-9165-b4025fbc07fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot train-validation difference scores of all metrics for tuned models with default thresholds\n",
+    "print(\"Hyperparameter-Tuned Models (Default Thresholds)\")\n",
+    "plot_train_val_difference([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], tuned_models_overfitting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
    "source": [
