In machine_learning_template.ipynb > Modeling > Hyperparameter Tuning > Overfitting section: Analyze overfitting of tuned models with optimized thresholds

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -6821,6 +6821,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb32fb9e-118d-45d6-ae20-590807ee11ce",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Optimized Thresholds</strong> <br>\n",
+    "    📌 Diagnose overfitting of hyperparameter-tuned models with optimized thresholds by comparing evaluation metrics between training and validation data.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "537752a0-a088-4dd5-9ea9-a34ac34f44fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze overfitting for tuned models with optimized thresholds \n",
+    "tuned_threshold_models_overfitting = analyze_overfitting(X_train_transformed, y_train, model_results=tuned_threshold_model_results)\n",
+    "print(\"Hyperparameter-Tuned Models (Optimized Thresholds)\")\n",
+    "round(tuned_threshold_models_overfitting, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b48036-43c0-47a9-80dd-1b8671d8cbe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot train vs. validation comparison of all metrics for tuned models with optimized thresholds  \n",
+    "plot_train_val_metrics([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], tuned_threshold_models_overfitting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1e7983-ffce-46c6-9530-07a01219c2e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot train-validation difference scores of all metrics for tuned models with optimized thresholds\n",
+    "print(\"Hyperparameter-Tuned Models (Optimized Thresholds)\")\n",
+    "plot_train_val_difference([\"Accuracy\", \"Recall\", \"Precision\", \"F1-Score\", \"ROC-AUC\", \"AUC-PR\"], tuned_threshold_models_overfitting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9eb3b26d-4647-4835-b105-964131ce0fc7",
    "metadata": {},
    "source": [
