In loan_default_prediction.ipynb > Modeling > Baseline Models > Overfitting section: Correct variable name when extracting best_threshold in analyze_overfitting function

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5386,7 +5386,7 @@
     "        # Predict on training data\n",
     "        y_train_proba = model.predict_proba(X_train)[:, 1]\n",
     "        if \"best_threshold\" in model_result:\n",
-    "            y_train_pred = (y_train_proba >= result[\"best_threshold\"]).astype(int)\n",
+    "            y_train_pred = (y_train_proba >= model_result[\"best_threshold\"]).astype(int)\n",
     "        else:\n",
     "            y_train_pred = model.predict(X_train)\n",
     "\n",
